--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
    
 
     <div class="container-fluid background-1">
-        <header class="text-white">
+       <header class="text-white">
             <nav class="navbar navbar-expand-lg position-relative">
               <div class="container header d-flex justify-content-between align-items-center">
                 <!-- Логотип -->
@@ -214,13 +214,10 @@
                 <div class="collapse custom-dropdown d-lg-none" id="mainNavbar">
                   <ul class="nav flex-column">
                     <li class="nav-item">
-                      <a class="nav-link text-white" href="#">Home</a>
+                      <a class="nav-link text-white" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-white" href="#">Scripts</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-white" href="#">Contact</a>
+                      <a class="nav-link text-white" href="scripts.html">Scripts</a>
                     </li>
                      <li class="nav-item">
                         <a class="nav-link text-white" href="access.html">Log out</a>
