--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
    
 
     <div class="container-fluid background-1">
-       <header class="text-white">
+        <header class="text-white">
             <nav class="navbar navbar-expand-lg position-relative">
               <div class="container header d-flex justify-content-between align-items-center">
                 <!-- Логотип -->
@@ -190,6 +190,7 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
           
+                <!-- Горизонтальное меню (для больших экранов) -->
                 <div class="collapse navbar-collapse d-none d-lg-flex justify-content-end" id="mainNavbar">
                   <ul class="nav nav-underline">
                     <li class="nav-item">
